tooling/nargo_cli/tests/compile_failure/dup_trait_implementation_4/src/main.nr
mod module1;
mod module2;
mod module3;

fn main() {
}
